--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ __pycache__/
 
 # Database
 diploma_backend/db.sqlite3
+diploma_backend/db_backup_before_migrate.sqlite3
 
 # Media files (user uploads)
 diploma_backend/media/
